--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		  			<div class="swiper-container swiper-container-portfolio">
 	    				<div class="swiper-wrapper">
 	      					<div class="swiper-slide">
-								<div class="portfolio-item onclick="">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl1.jpg" alt="">
 									</div>
@@ -86,7 +86,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl2.jpg" alt="">
 									</div>
@@ -99,7 +99,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl3.jpg" alt="">
 									</div>
@@ -112,7 +112,7 @@
 							</div>	
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl4.jpg" alt="">
 									</div>
@@ -125,7 +125,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl5.jpg" alt="">
 									</div>
@@ -138,7 +138,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl6.jpg" alt="">
 									</div>
@@ -151,7 +151,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl1.jpg" alt="">
 									</div>
@@ -164,7 +164,7 @@
 							</div>
 							<!-- /.swiper-slide -->
 							<div class="swiper-slide">
-								<div class="portfolio-item onclick=""">
+								<div class="portfolio-item" onclick="">
 									<div class="static">
 										<img src="img/bl2.jpg" alt="">
 									</div>
