--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</a>
 				</div>
 				<div>
-					<button href="#" class="btn-nav"><span></span></button>
+					<button class="btn-nav"><span></span></button>
 				</div>
 				<nav class="nav">
 					<ul>
