--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 	<!-- /.wrapper -->
 	
 	<script src="js/libs/jquery-3.3.1.min.js"></script>
+	<script src="js/ontouch.js"></script>
 	<script src="js/onclick.js"> </script> 
 	<script src="js/swiper.min.js"></script>
   	<script src="js/slider.js"> </script>
