--- a/index.html
+++ b/index.html
@@ -310,7 +310,11 @@
 			<!-- FOOTER -->
 			<footer class="footer" id="footer">
 				<div class="container">
-					<div class="copy"> &copy; Copyright 2013 <a href="#">Bak-One </a> |  One Page Flat Template</div>
+					<div class="author"> 
+						<span>With</span>
+						<iframe src="https://giphy.com/embed/azi3GTPtxWKCQ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+						<a href="https://t.me/katekhomenko">Kate Khomenko</a>
+					</div>
 			
 				</div>
 			</footer> 
