--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 				<div class="container">
 					<div class="author"> 
 						<span>With</span>
-						<iframe src="https://giphy.com/embed/azi3GTPtxWKCQ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+						<iframe src="https://giphy.com/embed/3SHxFt3GA2brq" width="480" height="384" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 						<a href="https://t.me/katekhomenko">Kate Khomenko</a>
 					</div>
 			
