--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 				<div class="container">
 					<div class="author"> 
 						<span>With</span>
-						<img src="img/tenor.gif" alt="">
+						<span>&#128153;</span>
 						<a href="https://t.me/katekhomenko">Kate Khomenko</a>
 					</div>
 			
